JG-2002-04-19-0: Bugfix:    Interactive jobs of any user failed if root had 
                            already the maximum number of group id's.
                 Enhancem.: More detailed description in error output
                 Issue:     #237
                 Bugtraq:   #4670669
                 Changed:   sge_shepherd qsh rshd

JG-2002-04-18-1: Enhancem.  Improved verbose output in qmake.
                            Start tasks on localhost also per qrsh - slower, 
                            but tasks are identifiable in accounting

JG-2002-04-18-0: Bugfix:    If more then 1 task of a parallel job was started
                            in a queue, retrieving exit code of a task and
                            signaling a task was unreliable as the TASK_ID
                            variable was no longer exported to the tasks 
                            environment. Replaced the TASK_ID mechanism by
                            an entry in the jobs config.
                 Issue:     #236
                 Bugtraq:   #4670664
                 Changed:   sge_shepherd, sge_execd, qrsh_starter

CR-2002-04-17-0: Testsuite: fixed tcl error on using help command line parameter
                 Bugfix:    

JG-2002-04-16-0: Enhancem.: In simulation mode (qmaster_param simulate_hosts=1)
                            one qsub call can submit any number of identical 
                            jobs by setting the job context variable 
                            SGE_MULTI_SUBMIT to the number of jobs to be 
                            created.

CR-2002-04-12-1: Bugfix:    corrected spelling mistakes

CR-2002-04-11-5: Testsuite: (merge from maintrunc)
                            - only produce warning when re_init core 
                              system resets cluster/schedd configuration
                            - removed DEMO category
                            - new interactive menu points:
                              (23) compile and pre install binaries